testing/error/error6.inp
* I II III J V
Missing setting
